--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,6 +10,8 @@ body {
   margin: 0 auto;
   border: 1px solid $white2;
   border-radius: 8px;
+  position: static;
+  height: auto;
 
   &-header {
     background-color: $backround;
