--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,9 +10,7 @@ body {
   margin: 0 auto;
   border: 1px solid $white2;
   border-radius: 8px;
-  position: static;
-  height: auto;
-
+  height: 100%;
   &-header {
     background-color: $backround;
     padding: 16px;
