--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,7 +10,8 @@ body {
   margin: 0 auto;
   border: 1px solid $white2;
   border-radius: 8px;
-  height: 100%;
+  height: 300vh;
+  overflow: hidden;
   &-header {
     background-color: $backround;
     padding: 16px;
