--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,7 +10,7 @@ body {
   margin: 0 auto;
   border: 1px solid $white2;
   border-radius: 8px;
-  height: 300vh;
+  max-height: 300vh;
   overflow: hidden;
   &-header {
     background-color: $backround;
