--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -10,8 +10,9 @@ body {
   margin: 0 auto;
   border: 1px solid $white2;
   border-radius: 8px;
-  max-height: 300vh;
-  overflow: hidden;
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
+  height: 100vh;
   &-header {
     background-color: $backround;
     padding: 16px;
